Add conversation archival exceptions, conversation brief generation service, task persistence, and corresponding tests